--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
-    <link rel="stylesheet" href="./common.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
+    <title>Page title</title>
+    <link rel="stylesheet" href="./sass/index.scss" />
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <div class="box">
-      <select id="selectElement" class="breed-select is-hidden"></select>
-      <span class="loader"></span>
-      <p class="loader-text">Loading data, please wait...</p>
-      <div class="cat-info"></div>
-    </div>
-
-    <script src="index.js" type="module"></script>
+    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/example.html"></include>
   </body>
 </html>
