--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <title>Form Search</title>
+    <link rel="stylesheet" href="./common.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Nunito:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <form class="search-form" id="search-form">
       <input
@@ -15,7 +21,15 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button type="submit" name="btn-submit">Search</button>
     </form>
+    <div class="gallery"></div>
+    <div class="observer-element"></div>
+    <button type="button" class="load-more is-hidden">Load more</button>
+    <p class="info-for-user is-hidden">
+      We're sorry, but you've reached the end of search results.
+    </p>
+
+    <script src="index.js" type="module"></script>
   </body>
 </html>
